[package]

name = "nx"
version = "0.2.3"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "A high performance Rust library used to read NX files with minimal memory usage."
documentation = "http://nolifedev.github.io/nx-rs/nx/"
repository = "https://github.com/NoLifeDev/nx-rs"
readme = "README.md"
keywords = ["NX"]
license = "MIT"
